removes position fixed due to modal glitches // removes particles on mobile due to canvas glitching

--- a/src/assets/scss/background.scss
+++ b/src/assets/scss/background.scss
@@ -1,12 +1,16 @@
 #tsparticles {
   opacity: 0.5;
-  // z-index: -10 !important;
-
   canvas {
     position: fixed;
     top: 0;
     left: 0;
     height: 100vh;
     z-index: -20 !important;
+  }
+  @media (max-width: 480px) {
+    width: calc(100% / 1);
+    padding: 0px;
+    margin: 0px 0px 6px 0px;
+    display: none;
   }
 }
