--- a/src/assets/scss/modal.scss
+++ b/src/assets/scss/modal.scss
@@ -22,7 +22,6 @@
     border: 2px solid $green;
     z-index: 150;
     margin: 50px 20px 0px 20px;
-    position: fixed;
     @media (max-width: 780px) {
       padding: 1.5rem 1rem;
       .modal__content-message {
